adding page connection for budget page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(135deg, #ffffff85, #ffffff85) top left, linear-gradient(135deg, #F0F4FE, #F7EFFD 25%, #FECFDF 75%, #FFF7EE 100%);
+  /* background: linear-gradient(135deg, #F0F4FE, #F7EFFD 25%, #FECFDF 75%, #FFF7EE 100%); */
   /* 
   background: linear-gradient(
       to bottom,
