--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -58,6 +58,7 @@ input[type="number"] {
 
 .slider {
     -webkit-appearance: none;
+    appearance: none;
     width: 300px;
     height: 12px;
     border-radius: 5px;
