--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -260,6 +260,10 @@ p.addListItem {
     margin-block: 3px;
 }
 
+p.addListItem:hover {
+    background-color: #FFF;
+}
+
 p.addListItem:first-child {
     margin-top: 6px;
 }
@@ -347,7 +351,8 @@ p.addListItem:first-child {
 #Essentials .budgetTotalChart,
 #Essentials .removeCategory,
 #Essentials .sectionBGColor,
-#Essentials .graphHeader {
+#Essentials .graphHeader,
+#Essentials p.addListItem:hover {
     background-color: #F0F4FE;
 }
 
@@ -385,7 +390,8 @@ p.addListItem:first-child {
 #Non-Essentials .budgetTotalChart,
 #Non-Essentials .removeCategory,
 #Non-Essentials .sectionBGColor,
-#Non-Essentials .graphHeader {
+#Non-Essentials .graphHeader,
+#Non-Essentials p.addListItem:hover {
     background-color: #F7EFFD;
 }
 
@@ -417,7 +423,8 @@ p.addListItem:first-child {
 #Savings .budgetTotalChart,
 #Savings .removeCategory,
 #Savings .sectionBGColor,
-#Savings .graphHeader {
+#Savings .graphHeader,
+#Savings p.addListItem:hover {
     background-color: #FFF7EE;
 }
 
