--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -77,9 +77,10 @@
 .section table td.summaryProgressBar #progressMonthly,
 .section table td.summaryProgressBar #progressBudget {
     border: 2px solid;
-    padding: 2px;
+    padding: 3px;
     z-index: 1;
     display: flex;
+    height: 28px;
 }
 
 .section table td.summaryProgressBar #progressBudget {
@@ -95,11 +96,12 @@
     padding: 1px 6px;
     font-weight: 700;
     font-size: .9em;
-    min-width: fit-content;
+    width: fit-content;
+    position: absolute;
 }
 
 .section td.summaryProgressBar #progressBudget p {
-    margin-left: auto;
+    right: 3px;
 }
 
 .section>table tr td#empty {
