--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -20,26 +20,85 @@
     vertical-align: text-top;
 }
 
-.section>table {
+.section>table#summaryTable,
+.section>table#expenseTable {
     border-collapse: separate;
     border-spacing: 0px;
-    font-size: .95em;
+    font-size: .9em;
     margin-top: 20px;
+    width: 80%;
 }
 
-.section>table tr:not(:first-child) td {
+.section>table#expenseTable {
+    color: #323232;
+}
+
+.section>table#summaryTable tr:not(:first-child) td {
     border-bottom: 1px solid;
 }
 
-.section>table td {
+.section>table#expenseTable tr td {
+    border-bottom: 2px solid;
+    padding-right: 15px;
+}
+
+.section>table#expenseTable tr td:nth-child(2) {
+    min-width: 400px;
+}
+
+.section>table#expenseTable tr:first-child td {
+    border-top: 2px solid;
+}
+
+.section>table#expenseTable tr td.expenseAmount {
+    color: #FF2955;
+    font-weight: 700;
+    padding-left: 15px;
+}
+
+.section>table#expenseTable tr td:not(:first-child) {
+    font-size: .95em;
+}
+
+.section>table#expenseTable tr td:first-child {
+    border-left: 2px solid;
+}
+
+.section>table#expenseTable tr td:first-child,
+.section>table#expenseTable tr td:last-child {
+    border-right: 2px solid;
+}
+
+.section>table#expenseTable tr:first-child td:first-child {
+    border-radius: 10px 0 0 0;
+}
+
+.section>table#expenseTable tr:first-child td:last-child {
+    border-radius: 0 10px 0 0;
+}
+
+.section>table#expenseTable tr:last-child td:first-child {
+    border-radius: 0 0 0 10px;
+}
+
+.section>table#expenseTable tr:last-child td:last-child {
+    border-radius: 0 0 10px 0;
+}
+
+.section>table#summaryTable td,
+.section>table#expenseTable td {
     padding: 6px 1em 6px 6px;
 }
 
-.section>table td:first-child {
+.section>table#expenseTable td {
+    background-color: #fff;
+}
+
+.section>table#summaryTable td:first-child {
     min-width: 200px;
 }
 
-.section>table td#summaryMonthly {
+.section>table#summaryTable td#summaryMonthly {
     border: solid 2px;
     border-radius: 10px 0 0 0;
     border-width: 2px 0 0 2px;
@@ -47,7 +106,7 @@
     padding: 0 12px;
 }
 
-.section>table td#summaryBudget {
+.section>table#summaryTable td#summaryBudget {
     border: solid 2px;
     border-radius: 0 10px 0 0;
     border-width: 2px 2px 0 0;
@@ -57,7 +116,7 @@
     padding: 0 18px;
 }
 
-.section>table tr td.summaryProgressBar {
+.section>table#summaryTable tr td.summaryProgressBar {
     border: solid 2px;
     border-width: 0 2px 0 2px;
     position: relative;
@@ -65,7 +124,7 @@
     padding: 0 12px;
 }
 
-.section>table tr td.summaryProgressBar span {
+.section>table#summaryTable tr td.summaryProgressBar span {
     display: flex;
     justify-content: space-between;
     position: absolute;
@@ -74,8 +133,8 @@
     gap: 2px;
 }
 
-.section table td.summaryProgressBar #progressMonthly,
-.section table td.summaryProgressBar #progressBudget {
+.section table#summaryTable td.summaryProgressBar #progressMonthly,
+.section table#summaryTable td.summaryProgressBar #progressBudget {
     border: 2px solid;
     padding: 3px;
     z-index: 1;
@@ -83,7 +142,7 @@
     height: 28px;
 }
 
-.section table td.summaryProgressBar #progressBudget {
+.section table#summaryTable td.summaryProgressBar #progressBudget {
     background-color: #fff;
     text-align: end;
     z-index: 0;
@@ -104,7 +163,7 @@
     right: 3px;
 }
 
-.section>table tr td#empty {
+.section>table#summaryTable tr td#empty {
     border: none;
     padding-left: 1em;
 }
@@ -113,7 +172,7 @@
     border-bottom: none;
 }
 
-#summaryTotals td:nth-child(7) {
+.section>table#summaryTable #summaryTotals td:nth-child(7) {
     border: solid 2px;
     border-width: 0 0 2px 2px;
     border-radius: 0 0 0 10px;
@@ -121,7 +180,7 @@
     padding: 0 12px;
 }
 
-#summaryTotals td:nth-child(8) {
+.section>table#summaryTable #summaryTotals td:nth-child(8) {
     border: solid 2px;
     border-width: 0 2px 2px 0;
     border-radius: 0 0 10px 0;
@@ -140,14 +199,24 @@
     color: #09D22F;
 }
 
-#Income.section>table td#summaryBudget,
-#Income.section>table td#summaryMonthly,
-#Income.section>table tr td.summaryProgressBar {
+#Income #summaryTotals,
+#Income.section>table#summaryTable td#summaryBudget,
+#Income.section>table#summaryTable td#summaryMonthly,
+#Income.section>table#summaryTable tr td.summaryProgressBar {
     background-color: #D0FFD0;
 }
 
+#Income.section>table#summaryTable tr:not(:first-child) td,
+#Income.section>table#expenseTable tr td,
+#Income.section>table#expenseTable tr:first-child td,
+#Income.section>table#expenseTable tr td:first-child,
+#Income.section>table#expenseTable tr td:first-child,
+#Income.section>table#expenseTable tr td:last-child {
+    border-color: #09D22F;
+}
+
 #Income.section,
-#Income.section>table tr td#empty {
+#Income.section>table#summaryTable tr td#empty {
     background-color: #EBFCEB;
 }
 
@@ -156,14 +225,23 @@
 }
 
 #Essential #summaryTotals,
-#Essential.section>table td#summaryBudget,
-#Essential.section>table td#summaryMonthly,
-#Essential.section>table tr td.summaryProgressBar {
+#Essential.section>table#summaryTable td#summaryBudget,
+#Essential.section>table#summaryTable td#summaryMonthly,
+#Essential.section>table#summaryTable tr td.summaryProgressBar {
     background-color: var(--blue-highlight);
 }
 
+#Essential.section>table#summaryTable tr:not(:first-child) td,
+#Essential.section>table#expenseTable tr td,
+#Essential.section>table#expenseTable tr:first-child td,
+#Essential.section>table#expenseTable tr td:first-child,
+#Essential.section>table#expenseTable tr td:first-child,
+#Essential.section>table#expenseTable tr td:last-child {
+    border-color: var(--blue-color);
+}
+
 #Essential.section,
-#Essential.section>table tr td#empty {
+#Essential.section>table#summaryTable tr td#empty {
     background-color: var(--blue-background);
 }
 
@@ -172,14 +250,23 @@
 }
 
 #Non-Essential #summaryTotals,
-#Non-Essential.section>table td#summaryBudget,
-#Non-Essential.section>table td#summaryMonthly,
-#Non-Essential.section>table tr td.summaryProgressBar {
+#Non-Essential.section>table#summaryTable td#summaryBudget,
+#Non-Essential.section>table#summaryTable td#summaryMonthly,
+#Non-Essential.section>table#summaryTable tr td.summaryProgressBar {
     background-color: var(--purple-highlight);
 }
 
+#Non-Essential.section>table#summaryTable tr:not(:first-child) td,
+#Non-Essential.section>table#expenseTable tr td,
+#Non-Essential.section>table#expenseTable tr:first-child td,
+#Non-Essential.section>table#expenseTable tr td:first-child,
+#Non-Essential.section>table#expenseTable tr td:first-child,
+#Non-Essential.section>table#expenseTable tr td:last-child {
+    border-color: var(--purple-color);
+}
+
 #Non-Essential.section,
-#Non-Essential.section>table tr td#empty {
+#Non-Essential.section>table#summaryTable tr td#empty {
     background-color: var(--purple-background);
 }
 
@@ -188,13 +275,22 @@
 }
 
 #Savings #summaryTotals,
-#Savings.section>table td#summaryBudget,
-#Savings.section>table td#summaryMonthly,
-#Savings.section>table tr td.summaryProgressBar {
+#Savings.section>table#summaryTable td#summaryBudget,
+#Savings.section>table#summaryTable td#summaryMonthly,
+#Savings.section>table#summaryTable tr td.summaryProgressBar {
     background-color: var(--orange-highlight);
 }
 
+#Savings.section>table#summaryTable tr:not(:first-child) td,
+#Savings.section>table#expenseTable tr td,
+#Savings.section>table#expenseTable tr:first-child td,
+#Savings.section>table#expenseTable tr td:first-child,
+#Savings.section>table#expenseTable tr td:first-child,
+#Savings.section>table#expenseTable tr td:last-child {
+    border-color: var(--orange-color);
+}
+
 #Savings.section,
-#Savings.section>table tr td#empty {
+#Savings.section>table#summaryTable tr td#empty {
     background-color: var(--orange-background);
 }
