--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -70,19 +70,19 @@
 }
 
 .section>table#expenseTable tr:first-child td:first-child {
-    border-radius: 10px 0 0 0;
+    border-top-left-radius: 10px;
 }
 
 .section>table#expenseTable tr:first-child td:last-child {
-    border-radius: 0 10px 0 0;
+    border-top-right-radius: 10px;
 }
 
 .section>table#expenseTable tr:last-child td:first-child {
-    border-radius: 0 0 0 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .section>table#expenseTable tr:last-child td:last-child {
-    border-radius: 0 0 10px 0;
+    border-bottom-right-radius: 10px;
 }
 
 .section>table#summaryTable td,
