--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -110,7 +110,7 @@
     visibility: hidden;
 }
 
-div:has(>input[type="number"]) {
+div:has(>input[type="text"]) {
     background: white;
     border: #323232 2px solid;
     padding: 0.25em;
@@ -119,7 +119,7 @@ div:has(>input[type="number"]) {
     width: fit-content;
 }
 
-input[type="number"] {
+input[type="text"] {
     outline: none;
     border: none;
     font-size: 1em;
@@ -339,11 +339,11 @@ p.addListItem:first-child {
 }
 
 
-.sectionBGColor div:has(>input[type="number"]) {
+.sectionBGColor div:has(>input[type="text"]) {
     border: #323232 2px solid;
 }
 
-.sectionBGColor input[type="number"] {
+.sectionBGColor input[type="text"] {
     color: #323232;
 }
 
@@ -356,7 +356,7 @@ p.addListItem:first-child {
 }
 
 #Essentials,
-#Essentials .sectionBGColor input[type="number"] {
+#Essentials .sectionBGColor input[type="text"] {
     color: #467AF8;
 }
 
@@ -367,7 +367,7 @@ p.addListItem:first-child {
 #Essentials .slider::-webkit-slider-thumb,
 #Essentials .summaryTotals p:nth-child(2),
 #Essentials .summaryTotals::after,
-#Essentials .sectionBGColor div:has(>input[type="number"]),
+#Essentials .sectionBGColor div:has(>input[type="text"]),
 #Essentials .budgetGraph,
 #Essentials .categoryHelpText,
 #Essentials .addCategoryButton,
@@ -395,7 +395,7 @@ p.addListItem:first-child {
 }
 
 #Non-Essentials,
-#Non-Essentials .sectionBGColor input[type="number"] {
+#Non-Essentials .sectionBGColor input[type="text"] {
     color: #9C32E2;
 }
 
@@ -406,7 +406,7 @@ p.addListItem:first-child {
 #Non-Essentials .slider::-webkit-slider-thumb,
 #Non-Essentials .summaryTotals p:nth-child(2),
 #Non-Essentials .summaryTotals::after,
-#Non-Essentials .sectionBGColor div:has(>input[type="number"]),
+#Non-Essentials .sectionBGColor div:has(>input[type="text"]),
 #Non-Essentials .budgetGraph,
 #Non-Essentials .categoryHelpText,
 #Non-Essentials .addCategoryButton,
@@ -428,7 +428,7 @@ p.addListItem:first-child {
 }
 
 #Savings,
-#Savings .sectionBGColor input[type="number"] {
+#Savings .sectionBGColor input[type="text"] {
     color: #FFA73D;
 }
 
@@ -439,7 +439,7 @@ p.addListItem:first-child {
 #Savings .slider::-webkit-slider-thumb,
 #Savings .summaryTotals p:nth-child(2),
 #Savings .summaryTotals::after,
-#Savings .sectionBGColor div:has(>input[type="number"]),
+#Savings .sectionBGColor div:has(>input[type="text"]),
 #Savings .budgetGraph,
 #Savings .categoryHelpText,
 #Savings .addCategoryButton,
