--- a/src/app/add-expense/page.css
+++ b/src/app/add-expense/page.css
@@ -23,6 +23,7 @@ body {
     width: calc(100% - 10rem);
     padding: 8px;
     border-radius: 50px;
+    border: 4px solid #323232;
 }
 
 #AddExpenseBar input {
@@ -50,9 +51,11 @@ body {
 
 .Expense#AddExpenseBar {
     background-color: #FF6799;
+    border-color: #E8034D;
 }
 
-.Expense .expenseInput {
+.Expense .expenseInput,
+.Expense .expenseInput input {
     color: #FF2955;
 }
 
