--- a/src/app/add-expense/page.css
+++ b/src/app/add-expense/page.css
@@ -1,279 +1,361 @@
 body {
-    background: linear-gradient(135deg, #F0F4FE, #F7EFFD 25%, #FECFDF 75%, #FFF7EE 100%);
+  background: linear-gradient(
+    135deg,
+    #f0f4fe,
+    #f7effd 25%,
+    #fecfdf 75%,
+    #fff7ee 100%
+  );
+}
+
+.saveBudgetContainer {
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  padding: 1.5px;
+  width: fit-content;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.saveBudget {
+  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
+  padding: 8px 12px;
+  border-radius: 4px;
+}
+
+.saveBudgetButton {
+  font-size: 1em;
+  font-weight: 800;
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .monthTitle {
-    font-size: 1.8em;
-    font-weight: 600;
+  font-size: 1.8em;
+  font-weight: 600;
 }
 
 .section {
-    padding: 1.5em 2em 2em 2em;
-    border-radius: 20px;
+  padding: 1.5em 2em 2em 2em;
+  border-radius: 20px;
 }
 
-.section>h2 {
-    font-size: 1.2em;
-    font-weight: 500;
+.section > h2 {
+  font-size: 1.2em;
+  font-weight: 500;
 }
 
 #AddExpenseBar {
-    position: fixed;
-    bottom: 20px;
-    width: calc(100% - 10rem);
-    padding: 8px;
-    border-radius: 50px;
-    border: 4px solid #323232;
-    display: flex;
-    gap: 1em;
+  position: fixed;
+  bottom: 20px;
+  width: calc(100% - 10rem);
+  padding: 8px;
+  border-radius: 50px;
+  border: 4px solid #323232;
+  display: flex;
+  gap: 1em;
 }
 
 #AddExpenseBar .typeSelector {
-    background: linear-gradient(135deg, #F0F4FE, #F7EFFD 25%, #FECFDF 75%, #FFF7EE 100%);
-    padding: 5px 12px;
-    border-radius: 20px;
-    padding: 5px;
-    cursor: pointer;
+  background: linear-gradient(
+    135deg,
+    #f0f4fe,
+    #f7effd 25%,
+    #fecfdf 75%,
+    #fff7ee 100%
+  );
+  padding: 5px 12px;
+  border-radius: 20px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 .Expense .expenseInput.expense,
 .Expense .expenseInput.expense input,
 #AddExpenseBar .typeSelector #expense {
-    color: #E8034D;
+  color: #e8034d;
 }
 
 .Expense .expenseInput.income,
 .Expense .expenseInput.income input,
 #AddExpenseBar .typeSelector #income {
-    color: #09D22F;
+  color: #09d22f;
 }
 
 .Expense .expenseInput.saving,
 .Expense .expenseInput.saving input,
 #AddExpenseBar .typeSelector #saving {
-    color: #FF9900;
+  color: #ff9900;
 }
 
 #AddExpenseBar .typeSelector span {
-    font-size: 1.4em;
-    font-weight: 800;
+  font-size: 1.4em;
+  font-weight: 800;
 }
 
 #AddExpenseBar .typeSelector .active,
 #AddExpenseBar .typeSelector .inactive {
-    border-radius: 50px;
-    padding: 0 8px;
+  border-radius: 50px;
+  padding: 0 8px;
 }
 
 #AddExpenseBar .typeSelector .active {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 #AddExpenseBar input,
 #AddExpenseBar select {
-    padding: 5px 12px;
-    outline: none;
-    border: none;
-    border-radius: 20px;
-    font-size: 1.1em;
-    font-weight: 500;
+  padding: 5px 12px;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  font-size: 1.1em;
+  font-weight: 500;
 }
 
-#AddExpenseBar input[name='description'] {
-    flex: 1;
+#AddExpenseBar input[name="description"] {
+  flex: 1;
 }
 
 #AddExpenseBar .expenseInput {
-    border-radius: 20px;
-    background-color: #fff;
-    padding-left: 8px;
-    font-size: 1.2em;
-    font-weight: 700;
+  border-radius: 20px;
+  background-color: #fff;
+  padding-left: 8px;
+  font-size: 1.2em;
+  font-weight: 700;
 }
 
 #AddExpenseBar .expenseInput input {
-    font-weight: 700;
-    padding-left: 6px;
-    width: 120px;
+  font-weight: 700;
+  padding-left: 6px;
+  width: 120px;
 }
 
-
 #AddExpenseBar #addExpenseButton {
-    outline: none;
-    background-color: #E8034D;
-    border: #FE9FBF 2px solid;
-    border-radius: 20px;
-    padding: 5px 15px;
-    font-size: 1.2em;
-    color: white;
-    font-weight: 600;
+  outline: none;
+  background-color: #e8034d;
+  border: #fe9fbf 2px solid;
+  border-radius: 20px;
+  padding: 5px 15px;
+  font-size: 1.2em;
+  color: white;
+  font-weight: 600;
 }
 
 .Expense#AddExpenseBar {
-    background-color: #FF6799;
-    border-color: #E8034D;
+  background-color: #ff6799;
+  border-color: #e8034d;
 }
 
-.section>table#expenseTable {
-    border-collapse: separate;
-    border-spacing: 0px;
-    font-size: .9em;
-    margin-top: 20px;
-    width: 80%;
+.section > table#expenseTable {
+  border-collapse: separate;
+  border-spacing: 0px;
+  font-size: 0.9em;
+  margin-top: 20px;
+  width: 80%;
 }
 
-.section>table#expenseTable {
-    color: #323232;
+.section > table#expenseTable {
+  color: #323232;
 }
 
-.section>table#expenseTable tr td {
-    border-bottom: 2px solid;
-    padding-right: 15px;
+.section > table#expenseTable tr td {
+  border-bottom: 2px solid;
+  padding-right: 15px;
 }
 
-.section>table#expenseTable tr td:nth-child(2) {
-    min-width: 400px;
+.section > table#expenseTable tr td:nth-child(2) {
+  min-width: 400px;
 }
 
-.section>table#expenseTable tr:first-child td {
-    border-top: 2px solid;
+.section > table#expenseTable tr:first-child td {
+  border-top: 2px solid;
 }
 
-.section>table#expenseTable tr td.expenseAmount {
-    color: #FF2955;
-    font-weight: 700;
-    padding-left: 15px;
+.section > table#expenseTable tr td.expenseAmount {
+  color: #ff2955;
+  font-weight: 700;
+  padding-left: 15px;
 }
 
-.section>table#expenseTable tr td:not(:first-child) {
-    font-size: .95em;
+.section > table#expenseTable tr td:not(:first-child) {
+  font-size: 0.95em;
 }
 
-.section>table#expenseTable tr td:first-child {
-    border-left: 2px solid;
+.section > table#expenseTable tr td:first-child {
+  border-left: 2px solid;
 }
 
-.section>table#expenseTable tr td:first-child,
-.section>table#expenseTable tr td:last-child {
-    border-right: 2px solid;
+.section > table#expenseTable tr td:first-child,
+.section > table#expenseTable tr td:last-child {
+  border-right: 2px solid;
 }
 
-.section>table#expenseTable tr:first-child td:first-child {
-    border-top-left-radius: 10px;
+.section > table#expenseTable tr:first-child td:first-child {
+  border-top-left-radius: 10px;
 }
 
-.section>table#expenseTable tr:first-child td:last-child {
-    border-top-right-radius: 10px;
+.section > table#expenseTable tr:first-child td:last-child {
+  border-top-right-radius: 10px;
 }
 
-.section>table#expenseTable tr:last-child td:first-child {
-    border-bottom-left-radius: 10px;
+.section > table#expenseTable tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
 }
 
-.section>table#expenseTable tr:last-child td:last-child {
-    border-bottom-right-radius: 10px;
+.section > table#expenseTable tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
 }
 
-.section>table#expenseTable td {
-    padding: 6px 1em 6px 6px;
+.section > table#expenseTable td {
+  padding: 6px 1em 6px 6px;
 }
 
-.section>table#expenseTable td {
-    background-color: #fff;
+.section > table#expenseTable td {
+  background-color: #fff;
 }
-
-
 
 /* Section colors */
 
-#Income.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetWarning p,
-#Savings.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetWarning p {
-    color: #323232;
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetWarning
+  p,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetWarning
+  p {
+  color: #323232;
 }
 
 #Income,
-#Income.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetMonthly p,
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetMonthly
+  p,
 #Income.section table#summaryTable tr#summaryTotals #overBudgetExpenses {
-    color: #09D22F;
+  color: #09d22f;
 }
 
 #Income #summaryTotals,
-#Income.section>table#summaryTable td#summaryBudget,
-#Income.section>table#summaryTable td#summaryMonthly,
-#Income.section>table#summaryTable tr td.summaryProgressBar,
-#Income.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetMonthly,
-#Income.section table#summaryTable td.summaryProgressBar #progressBudget.overBudgetProgress,
-#Income.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetWarning {
-    background-color: #D0FFD0;
+#Income.section > table#summaryTable td#summaryBudget,
+#Income.section > table#summaryTable td#summaryMonthly,
+#Income.section > table#summaryTable tr td.summaryProgressBar,
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetMonthly,
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressBudget.overBudgetProgress,
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetWarning {
+  background-color: #d0ffd0;
 }
 
-#Income.section>table#summaryTable tr:not(:first-child) td,
-#Income.section>table#expenseTable tr td,
-#Income.section>table#expenseTable tr:first-child td,
-#Income.section>table#expenseTable tr td:first-child,
-#Income.section>table#expenseTable tr td:first-child,
-#Income.section>table#expenseTable tr td:last-child,
-#Income.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetMonthly,
-#Income.section table#summaryTable td.summaryProgressBar #progressBudget.overBudgetProgress,
-#Income.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetWarning,
+#Income.section > table#summaryTable tr:not(:first-child) td,
+#Income.section > table#expenseTable tr td,
+#Income.section > table#expenseTable tr:first-child td,
+#Income.section > table#expenseTable tr td:first-child,
+#Income.section > table#expenseTable tr td:first-child,
+#Income.section > table#expenseTable tr td:last-child,
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetMonthly,
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressBudget.overBudgetProgress,
+#Income.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetWarning,
 #Income .overBudgetBlock {
-    border-color: #09D22F;
+  border-color: #09d22f;
 }
 
 #Income .overBudgetBlock {
-    background-color: #09D22F;
+  background-color: #09d22f;
 }
 
 #Expenses {
-    color: #FF2955;
+  color: #ff2955;
 }
 
 #Expenses #summaryTotals,
-#Expenses.section>table#summaryTable td#summaryBudget,
-#Expenses.section>table#summaryTable td#summaryMonthly,
-#Expenses.section>table#summaryTable tr td.summaryProgressBar {
-    background-color: var(--blue-highlight);
+#Expenses.section > table#summaryTable td#summaryBudget,
+#Expenses.section > table#summaryTable td#summaryMonthly,
+#Expenses.section > table#summaryTable tr td.summaryProgressBar {
+  background-color: var(--blue-highlight);
 }
 
-#Expenses.section>table#summaryTable tr:not(:first-child) td,
-#Expenses.section>table#expenseTable tr td,
-#Expenses.section>table#expenseTable tr:first-child td,
-#Expenses.section>table#expenseTable tr td:first-child,
-#Expenses.section>table#expenseTable tr td:first-child,
-#Expenses.section>table#expenseTable tr td:last-child {
-    border-color: #FF2955;
+#Expenses.section > table#summaryTable tr:not(:first-child) td,
+#Expenses.section > table#expenseTable tr td,
+#Expenses.section > table#expenseTable tr:first-child td,
+#Expenses.section > table#expenseTable tr td:first-child,
+#Expenses.section > table#expenseTable tr td:first-child,
+#Expenses.section > table#expenseTable tr td:last-child {
+  border-color: #ff2955;
 }
 
 #Savings,
-#Savings.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetMonthly p,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetMonthly
+  p,
 #Savings.section table#summaryTable tr#summaryTotals #overBudgetExpenses {
-    color: var(--orange-color);
+  color: var(--orange-color);
 }
 
 #Savings #summaryTotals,
-#Savings.section>table#summaryTable td#summaryBudget,
-#Savings.section>table#summaryTable td#summaryMonthly,
-#Savings.section>table#summaryTable tr td.summaryProgressBar,
-#Savings.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetMonthly,
-#Savings.section table#summaryTable td.summaryProgressBar #progressBudget.overBudgetProgress,
-#Savings.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetWarning {
-    background-color: var(--orange-highlight);
+#Savings.section > table#summaryTable td#summaryBudget,
+#Savings.section > table#summaryTable td#summaryMonthly,
+#Savings.section > table#summaryTable tr td.summaryProgressBar,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetMonthly,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressBudget.overBudgetProgress,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetWarning {
+  background-color: var(--orange-highlight);
 }
 
-#Savings.section>table#summaryTable tr:not(:first-child) td,
-#Savings.section>table#expenseTable tr td,
-#Savings.section>table#expenseTable tr:first-child td,
-#Savings.section>table#expenseTable tr td:first-child,
-#Savings.section>table#expenseTable tr td:first-child,
-#Savings.section>table#expenseTable tr td:last-child,
-#Savings.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetMonthly,
-#Savings.section table#summaryTable td.summaryProgressBar #progressBudget.overBudgetProgress,
-#Savings.section table#summaryTable td.summaryProgressBar #progressMonthly.overBudgetWarning,
+#Savings.section > table#summaryTable tr:not(:first-child) td,
+#Savings.section > table#expenseTable tr td,
+#Savings.section > table#expenseTable tr:first-child td,
+#Savings.section > table#expenseTable tr td:first-child,
+#Savings.section > table#expenseTable tr td:first-child,
+#Savings.section > table#expenseTable tr td:last-child,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetMonthly,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressBudget.overBudgetProgress,
+#Savings.section
+  table#summaryTable
+  td.summaryProgressBar
+  #progressMonthly.overBudgetWarning,
 #Savings .overBudgetBlock {
-    border-color: var(--orange-color);
+  border-color: var(--orange-color);
 }
 
-
 #Savings .overBudgetBlock {
-    background-color: var(--orange-color);
+  background-color: var(--orange-color);
 }
